Finish home and about page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome to UT Dallas</h1>
-<p>This is the FACSS airport pick up site</p>
+<div class="center hero-unit">
+	<h1>Welcome to UT Dallas</h1>
+	<h2>This is the FACSS airport pick up site</h2>
+	<%= link_to "Sign up as Newbie!", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up as Volunteer!", '#', class: "btn btn-large btn-primary" %>
+</div>
