Finish make post pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,21 @@
-<div class="center hero-unit">
-	<h1>Welcome to UT Dallas</h1>
-	<h2>This is the FACSS airport pick up site</h2>
-	<%= link_to "Sign up!", signup_path, class: "btn btn-large btn-primary" %>
+<% if signed_in? %>
+	<div class="row">
+		<aside class="span4">
+			<section>
+				<%= render 'shared/user_info' %>
+			</section>
+			<section>
+				<%= render 'shared/post_form' %>
+			</section>
+		</aside>
+	</div>
+<% else %>
+	<div class="center hero-unit">
+		<h1>Welcome to UT Dallas</h1>
 	
-</div>
+		<h2>This is the FACSS airport pick up site</h2>
+			
+		<%= link_to "Sign up!", signup_path, class: "btn btn-large btn-primary" %>
+	
+	</div>
+<% end %>
