--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
-	  <%= render 'shared/error_messages' %>
+	  <%= render 'shared/error_messages', object: f.object %>
 	
 	  <%= f.radio_button :newbie, true %> <%= f.label :newbie, "I'm a new student need pick up" %>
 	  <%= f.radio_button :newbie, false%> <%= f.label :newbie, "I'm a volunteer willing to provide pick up" %>
