--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,13 +12,22 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
+ 	  <%= f.label :qq, "QQ" %>
+      <%= f.text_field :qq %>
+
+ 	  <%= f.label :phone, "Phone#" %>
+      <%= f.text_field :phone %>
+
+ 	  <%= f.label :renren, "Renren(xiaonei)" %>
+      <%= f.text_field :renren %>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Update!", class: "btn btn-large btn-primary" %>
     <% end %>
 
     <%= gravatar_for @user %>
