--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,14 @@
       </h1>
     </section>
   </aside>
+  
+  <div class="span4">
+    <li>Email: <%= @user.email %></li>
+	<li>QQ: <%= @user.qq %></li>
+	<li>Phone#: <%= @user.phone %></li>
+	<li>Renren: <%= @user.renren %></li>
+  </div>
+  
   <div class="span8">
     <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
