--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,18 @@
 <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "UTD Airport Pick Up", root_path, id: "logo" %>
+		<% if signed_in? %>
+          <%= link_to "UTD Airport Pick Up", current_user, id: "logo" %>
+		<% else %>
+		  <%= link_to "UTD Airport Pick Up", root_path, id: "logo" %>
+		<% end %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    root_path %></li>
+			<% if signed_in? %>
+              <li><%= link_to "Home",    current_user %></li>
+			<% else %>
+			  <li><%= link_to "Home",    root_path %></li>
+			<% end %>
               <li><%= link_to "About",    about_path %></li>
 			  <% if signed_in? %>
             	<li><%= link_to "Users", users_path %></li>
