--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,9 @@
         </section>
 	    <% end %>
 	<% else %>
-		<h1>Im volunteer</h1>
+		<h1>
+			<%= link_to "See all the posts", posts_path %>
+		</h1>
     <% end %>
 	</aside>
   </div>
