Admin can see profile and delete posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
 	<li>Number of people: <%= post.number_of_people %></li>
 	<li>Luggage: <%= post.luggage_number %></li>
 	<li>Notes: <%= post.note %></li>
-	<li><% if current_user?(post.user) %>
+	<li><% if current_user?(post.user) || current_user.admin? %>
 		<%= link_to "delete", post, method: :delete, confirm: "You sure?", title: post.user.name%>
 	<% end %></li>
 	<li>
