Finish picked post cannot be picked by different user

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,20 +11,24 @@
 		<%= link_to "delete", post, method: :delete, confirm: "You sure?", title: post.user.name%>
 	<% end %></li>
 	<li>
-		<% unless current_user?(post.user) %>
-  			<div id="pick_form">
-  			<% if current_user.picking?(post) %> 
-    			<%= form_for(current_user.trips.find_by_pickedpost_id(post), html: { method: :delete }) do |f| %>
-  					<div><%= f.hidden_field :pickedpost_id %></div>
-  						 <%= f.submit "Unpick", class: "btn btn-large" %>
-				<% end %>
-  			<% else %>
-    			<%= form_for(current_user.trips.build(pickedpost_id: post.id)) do |f| %>
-  					<div><%= f.hidden_field :pickedpost_id %></div>
-  						 <%= f.submit "Pick", class: "btn btn-large btn-primary" %>
-				<% end %>
-  			<% end %>
-  			</div>
+		<% unless current_user?(post.user) || current_user.newbie? %>
+			<% unless post.status? %>
+  				<div id="pick_form">
+  				<% if current_user.picking?(post) %> 
+    				<%= form_for(current_user.trips.find_by_pickedpost_id(post), html: { method: :delete }) do |f| %>
+  						<div><%= f.hidden_field :pickedpost_id %></div>
+  						 	 <%= f.submit "Unpick", class: "btn btn-large" %>
+					<% end %>
+  				<% else %>
+    				<%= form_for(current_user.trips.build(pickedpost_id: post.id)) do |f| %>
+  						<div><%= f.hidden_field :pickedpost_id %></div>
+  						 	 <%= f.submit "Pick", class: "btn btn-large btn-primary" %>
+					<% end %>
+  				<% end %>
+  				</div>
+			<% else %>			
+				Pickup by: <%= link_to Trip.find_by_pickedpost_id(post).volunteer.name, Trip.find_by_pickedpost_id(post).volunteer %>
+			<% end %>
 		<% end %>
 	</li>
 	
