--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Edit user") %> 
 <h1>Update your profile</h1>
+<h4>(Personal info only visible to person share ride with you)</h3>
 
 <div class="row">
   <div class="span6 offset3">
