--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -26,20 +26,22 @@
 		
 			<% if !post.status? && !current_user.newbie? && !current_user?(post.user) %>
   				<div id="pick_form">
-  				<% if current_user.picking?(post) %> 
-    				<%= form_for(current_user.trips.find_by_pickedpost_id(post), html: { method: :delete }) do |f| %>
-  						<div><%= f.hidden_field :pickedpost_id %></div>
-  						 	 <%= f.submit "Unpick", class: "btn btn-large" %>
-					<% end %>
-  				<% else %>
     				<%= form_for(current_user.trips.build(pickedpost_id: post.id)) do |f| %>
   						<div><%= f.hidden_field :pickedpost_id %></div>
   						 	 <%= f.submit "Pick", class: "btn btn-large btn-primary" %>
 					<% end %>
-  				<% end %>
   				</div>
+			<% elsif post.status? && current_user.picking?(post) %>
+				<div id="pick_form">
+					<%= form_for(current_user.trips.find_by_pickedpost_id(post), html: { method: :delete }) do |f| %>
+  						<div><%= f.hidden_field :pickedpost_id %></div>
+  						 	 <%= f.submit "Unpick", class: "btn btn-large" %>
+					<% end %>
+				</div>
 			<% elsif post.status? %>			
 				Pickup by: <%= link_to Trip.find_by_pickedpost_id(post).volunteer.name, Trip.find_by_pickedpost_id(post).volunteer %>
+			<% elsif !post.status? && current_user.newbie? %>
+				Have not been picked by anyone.
 			<% end %>
 		
 	</li>
