--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -51,6 +51,12 @@
   	<li><%= link_to "Update post", edit_post_path(post) %></li>
   <% end %>
 
+  <% if post.need_housing? %>
+	<li>Temp housing: <% post.temp_housing_arrangement %></li>
+  <% else %>
+	<li>No need</li>
+  <% end %>
+
   <span class="timestamp">
     Posted <%= time_ago_in_words(post.created_at) %> ago.
   </span>
