--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,14 +43,77 @@
    
   
   <div class="pp">
-	<aside class="span8">
+	<aside class="span16">
 	<% if @user.newbie? %>
 		<% if @user.posts.count!=0 %>
-      		<h3>My Posts (<%= @user.posts.count %>)</h3>
-      		<ol class="posts">
-        		<%= render @posts %>
-      		</ol>
-      		<%= will_paginate @posts %>
+      		<h3>Posts (<%= @user.posts.count %>)</h3>
+      		<div class="row-fluid">
+        <div class="span16">
+            <table class="table-striped table-bordered table items-list">
+                <tread>
+                    <tr>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=id" style>Id</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=name" style>Name</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=user.gender" style>Gender</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=user.major" style>Major</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=arrival_date" style>Arrival date</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=arrival_time" style>Arrival time</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=flight_number" style>Flight number</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=number_of_prople" style>Number of people</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=need_pickup" style>Need airport pickup?</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=need_housing" style>Need temp housing?</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=note" style>Notes</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=status" style>Pickup status</a>
+                        </th>
+                        <th>
+                            <i class style="position:absolute"></i>
+                            <a href="/posts?order=temp_housing" style>Temp housing status</a>
+                        </th>
+                    </tr>
+                </tread>
+                <tbody class="autopagerize_page_element">
+                
+                    <%= render @posts %>
+                </tbody>
+            </table>
+        </div>
+    </div>
+      	
 		<% elsif @user.posts.count==0 && @user==current_user %>
 		<section>
 			<%= render 'shared/post_form' %>
