--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
 	</header>
 	
 	<div class="row-fluid">
-		<div class="span12">
+		<div class="span16">
 			<table class="table-striped table-bordered table items-list">
 				<tread>
 					<tr>
@@ -22,6 +22,10 @@
 						<th>
 							<i class style="position:absolute"></i>
 							<a href="/posts?order=name" style>Name</a>
+						</th>
+						<th>
+							<i class style="position:absolute"></i>
+							<a href="/posts?order=user.gender" style>Gender</a>
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
@@ -65,15 +69,11 @@
 						</th>
 					</tr>
 				</tread>
+				<tbody class="autopagerize_page_element">
 				
+  					<%= render @posts %>
+				</tbody>
 			</table>
 		</div>
 	</div>
-					
-			
-
-
-<ul class="posts">
-  <%= render @posts %>
-</ul>
 </div>
