newbie cannot see users and posts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,10 @@
 			<% end %>
               <li><%= link_to "About",    about_path %></li>
 			  <% if signed_in? %>
+				<% if !current_user.newbie? %>
             	<li><%= link_to "Users", users_path %></li>
 				<li><%= link_to "Posts", posts_path %></li>
+				<% end %>
             	<li id="fat-menu" class="dropdown">
               		<a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 		Account <b class="caret"></b>
