change post index link

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,11 +17,11 @@
 					<tr>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=id" style>Id</a>
+							Id
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=name" style>Name</a>
+							Name
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
@@ -45,7 +45,7 @@
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=number_of_prople" style>Number of people</a>
+							Number of people
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
@@ -57,7 +57,7 @@
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
-							<a href="/posts?order=note" style>Notes</a>
+							Notes
 						</th>
 						<th>
 							<i class style="position:absolute"></i>
